--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_APP_BASE_URL = https://studynotion-backend-q3of.onrender.com/
+VITE_APP_BASE_URL = https://studynotion-backend-q3of.onrender.com/api/v1
