--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "server": "cd server && npm run dev"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@ramonak/react-progress-bar": "^5.0.3",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.7.9",
+    "backend": "file:..",
     "chart.js": "^4.4.0",
     "concurrently": "^8.2.1",
     "copy-to-clipboard": "^3.3.3",
